# libmgui

./: .gitignore  CMakeLists.txt  README.md  changelog
cmake/: mgui-config.cmake.in
examples/: CMakeLists.txt  example-1.cpp  example-2.cpp  revision.hpp
examples/ExampleAppResources/: dbus-interface.xml
examples/ExampleAppResources/Alerts/: about-alert.xml  close-all-windows-alert.xml
examples/ExampleAppResources/Dialogs/: color-picker.xml
examples/ExampleAppResources/Menus/: example-menu.ui  example-menu.xml
include/: MAcceleratorTable.hpp  MAlerts.hpp  MAnimation.hpp  MAnimationImpl.hpp  MApplication.hpp  MApplicationImpl.hpp  MCanvas.hpp  MCanvasImpl.hpp  MClipboard.hpp  MClipboardImpl.hpp  MCmdLine.hpp  MColor.hpp  MColorPicker.hpp  MCommand.hpp  MCommands.hpp  MController.hpp  MControls.hpp  MControls.inl  MControlsImpl.hpp  MDevice.hpp  MDeviceImpl.hpp  MDialog.hpp  MDocApplication.hpp  MDocClosedNotifier.hpp  MDocWindow.hpp  MDocument.hpp  MError.hpp  MFile.hpp  MGfxDevice.hpp  MHandler.hpp  MLib.hpp  MMenu.hpp  MMenuImpl.hpp  MP2PEvents.hpp  MPreferences.hpp  MPrinter.hpp  MSaverMixin.hpp  MSound.hpp  MStrings.hpp  MTypes.hpp  (+7 more)
include/Gtk/: MGtkApplicationImpl.hpp  MGtkCanvasImpl.hpp  MGtkCommandEmitter.hpp  MGtkControlsImpl.hpp  MGtkControlsImpl.inl  MGtkDeviceImpl.hpp  MGtkLib.hpp  MGtkList.hpp  MGtkWidgetMixin.hpp  MGtkWindowImpl.hpp  MPrimary.hpp
include/Windows/: MWinControlsImpl.hpp  MWinWindowImpl.hpp
src/: MAcceleratorTable.cpp  MAlerts.cpp  MAnimation.cpp  MAnimationImpl.cpp  MApplication.cpp  MCanvas.cpp  MClipboard.cpp  MColor.cpp  MColorPicker.cpp  MController.cpp  MControls.cpp  MDevice.cpp  MDialog.cpp  MDocApplication.cpp  MDocClosedNotifier.cpp  MDocWindow.cpp  MDocument.cpp  MError.cpp  MFile.cpp  MGfxDevice.cpp  MHandler.cpp  MLib.cpp  MMenu.cpp  MPreferences.cpp  MSaverMixin.cpp  MSound.cpp  MStrings.cpp  MTypes.cpp  MUnicode.cpp  MUtils.cpp  MView.cpp  MWindow.cpp
src/Gtk/: MGtkAlerts.cpp  MGtkAnimationImpl.cpp  MGtkApplicationImpl.cpp  MGtkApplicationImpl.hpp  MGtkCanvasImpl.cpp  MGtkCanvasImpl.hpp  MGtkClipboardImpl.cpp  MGtkCommandEmitter.hpp  MGtkControlsImpl.cpp  MGtkControlsImpl.hpp  MGtkControlsImpl.inl  MGtkDeviceImpl.cpp  MGtkDeviceImpl.hpp  MGtkDialogImpl.cpp  MGtkDocClosedNotifier.cpp  MGtkError.cpp  MGtkFile.cpp  MGtkLib.hpp  MGtkMain.cpp  MGtkMenu.cpp  MGtkSound.cpp  MGtkUtils.cpp  MGtkWidgetMixin.cpp  MGtkWidgetMixin.hpp  MGtkWindowImpl.cpp  MGtkWindowImpl.hpp  MPrimary.cpp
src/Windows/: MWinAlerts.cpp  MWinApplicationImpl.cpp  MWinCanvasImpl.cpp  MWinCanvasImpl.hpp  MWinClipboardImpl.cpp  MWinControlsImpl.cpp  MWinControlsImpl.hpp  MWinDeviceImpl.cpp  MWinDialogImpl.cpp  MWinFile.cpp  MWinMain.cpp  MWinMenuImpl.cpp  MWinPreferences.cpp  MWinProcMixin.cpp  MWinProcMixin.hpp  MWinResources.cpp  MWinSound.cpp  MWinUtils.cpp  MWinWindowImpl.cpp  MWinWindowImpl.hpp
